Fix Image Stretch

--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,8 @@ header {
 }
 
 .bottomWarning {
-  margin-top: 50px;
+  margin-top: 100px;
+  margin-bottom: 75px;
 }
 
 .overlapText{
@@ -189,7 +190,7 @@ header {
 .vertical-center img {
     width: 100%;
     height: 100%;
-
+    object-fit: cover;
     overflow: hidden;
 }
 
